[fix] (Fab) decrease z-index (to stay under drawer)

--- a/src/sass/Fab.scss
+++ b/src/sass/Fab.scss
@@ -5,7 +5,7 @@
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  z-index: 5;
+  z-index: 4;
   @media (min-width: 1024px) {
     bottom: 1.5rem;
     right: 1.5rem;
